# rust-test

./: .cz.toml  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  body.md  knope.toml  package.json  release-0.0.2-a0.md  release-0.0.2-dev9373599109.md  release-0.0.2.md
.changeset/: fix_improve_release_process.md
.github/actions/node/: action.yaml
.github/actions/setup-rust/: action.yaml
.github/workflows/: ci.yaml  prepare_release.yaml  release.yaml
crates/fuel-core-nats/: Cargo.toml
crates/fuel-streams/: Cargo.toml
crates/fuel-streams-core/src/nats/: error.rs
scripts/: build.sh  setup.sh  update-version.sh
src/: main.rs
