[package]
name = "fuel-core-nats"
authors = ["Fuel Labs <contact@fuel.sh>"]
keywords = ["data-stream", "blockchain", "cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
license = "Apache-2.0"
repository = "https://github.com/pedronauck/rust-test"
description = "Fuel library to handle data streams using Nats"
version = "0.0.5"

[dependencies]
anyhow = "1.0.86"
async-nats = "0.35.1"
clap = "4.5.4"
fuel-core = { workspace = true }
fuel-core-bin = { workspace = true }
fuel-core-services = { workspace = true }
fuel-core-types = { workspace = true }
futures-util = "0.3.30"
serde_json = "1.0.117"
tokio = "1.37.0"
tracing = "0.1.40"
